--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Bhutan -- Description and travel'
 - !lcsh 'India -- Description and travel'
+- GITenberg
 title: Life in an Indian Outpost
 url: http://www.gutenberg.org/ebooks/37782
